fixed button colors and spacing on login page

--- a/moodify-client/src/styles/button.css
+++ b/moodify-client/src/styles/button.css
@@ -17,7 +17,7 @@
 }
 
 .wide-button {
-    color: black;
+    color: white;
     font-size: 18pt;
     padding: 8px 15px 8px 15px;
     margin: 0px;
