--- a/moodify-client/src/styles/login.css
+++ b/moodify-client/src/styles/login.css
@@ -18,7 +18,7 @@
     color: white;
     font-size: 32pt;
     font-weight: 700;
-    margin-top: 10px;
+    margin-top: 75px;
 }
 
 .logo {
